ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget6/input.ts.stderr
error[1007]: Jump target cannot cross function boundary
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget6/input.ts:2:3
  |
2 |   continue target;
  |   ^^^^^^^^^^^^^^^^

